--- a/Un_RSOI_3/Base.lproj/Main.storyboard
+++ b/Un_RSOI_3/Base.lproj/Main.storyboard
@@ -126,7 +126,7 @@
                                 <rect key="frame" x="0.0" y="88" width="375" height="641"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="81" id="qyt-XN-VbP">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MessageCell" rowHeight="81" id="qyt-XN-VbP" customClass="MessageTableViewCell" customModule="Un_RSOI_3" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="81"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qyt-XN-VbP" id="Dqs-YT-98z">
@@ -148,6 +148,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="messageTextLabel" destination="pbC-rR-jwT" id="wJc-E2-sZv"/>
                                             <segue destination="lsM-VE-e5p" kind="show" identifier="MessagesToMessageSegue" id="dgR-JE-jTk"/>
                                         </connections>
                                     </tableViewCell>
